# actor-cpp

./: .gitignore  CMakeLists.txt
.cursor/rules/: langgpt.mdc  task-queue-expert.mdc
docs/: actor_event_scheduling.md
examples/: simple_example.cpp
include/: actor.h  event_loop.h  message.h  scheduler.h
src/: actor.cpp  event_loop.cpp  message.cpp  scheduler.cpp
tests/: test_actor.cpp
